--- a/service-client2/pom.xml
+++ b/service-client2/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>serviceb</artifactId>
+    <artifactId>service-client2</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>serviceb</name>
+    <name>service-client2</name>
     <description>Demo project for Spring Boot</description>
     <url/>
     <licenses>
