--- a/service-client1/pom.xml
+++ b/service-client1/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>servicea</artifactId>
+    <artifactId>service-client1</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>servicea</name>
+    <name>service-client1</name>
     <description>Demo project for Spring Boot</description>
     <url/>
     <licenses>
