--- a/service-client2/src/main/resources/application.yml
+++ b/service-client2/src/main/resources/application.yml
@@ -1,11 +1,11 @@
-
 server:
   port: 8082
+
 spring:
   application:
     name: service-client2
+
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
-
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
